cabal-version:      3.4
name:               drylisp
version:            0.1.0.0
synopsis:            A LISP Interpreter and REPL 
-- description:
homepage:           github.com/cnyegun/drylisp
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Chi Nguyen
maintainer:         buichinguyen1105@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  DryLisp, LispParser
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable drylisp
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.3.0,
        drylisp

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite drylisp-test
    import:           warnings
    default-language: Haskell2010
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    TestLispParser
                    , TestLispEval
    build-depends:
        base ^>=4.18.3.0,
        drylisp,
        QuickCheck,
        hspec
